--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@app-masters/react-cloudinary-uploader": "^0.1.42",
+    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -15,15 +19,19 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "cloudinary": "^1.25.2",
+    "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
+    "pivotal-ui": "^19.2.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-cloudinary": "^0.4.1",
     "react-cloudinary-upload-widget": "^1.4.3",
     "react-dom": "^17.0.2",
+    "react-iconly": "^2.2.2",
     "react-markdown": "^6.0.2",
     "react-minimal-side-navigation": "^1.8.0",
     "react-moment": "^1.1.1",
+    "react-pagination-library": "^0.1.14",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
