--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-cloudinary": "^0.4.1",
     "react-cloudinary-upload-widget": "^1.4.3",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-iconly": "^2.2.2",
     "react-markdown": "^6.0.2",
     "react-minimal-side-navigation": "^1.8.0",
@@ -45,7 +47,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
